@@ -24,6 +24,12 @@
 2009-05-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/random.c (AcquireMagickRandomKernel): Assure that
+        allocated random kernels do not occupy the same cache lines.
+
+  <LI> magick/gem.c (GenerateDifferentialNoise): User is required to
+        supply random kernel.
+
   <LI> doc/options.imdoc: Document -format "%p".  Problem was reported
         by Stijn Sanders.
 
